# AI_NovelGenerator

./: 300万字小说架构评估计划.md  CLI_README.md  README.md  chapter_directory_parser.py  cli.py  main.py  prompt_definitions.py  pyproject.toml
novel_generator/: architecture.py  blueprint.py  chapter.py  common.py
ui/: generation_handlers.py
事例/: activeWritingContext.md  characters.md  plot_outline_and_milestones.md  project_overview.md  worldbuilding.md
